<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".AddCarActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/carNameParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/car_name"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:boxStrokeColor="@color/black"
                app:helperTextTextColor="@color/black"
                app:hintTextColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/carName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textDirection="rtl"
                    android:textCursorDrawable="@null"
                    tools:targetApi="jelly_bean_mr1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/carLastKilometerParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/carNameParent"
                android:hint="@string/car_last_kilometer"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                app:boxStrokeColor="@color/black"
                app:helperTextTextColor="@color/black"
                app:hintTextColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/carLastKilometer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textCursorDrawable="@null"
                    android:textDirection="rtl"
                    tools:targetApi="jelly_bean_mr1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveCar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_car"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/carLastKilometerParent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/black"
                android:padding="16dp"
                fontPath="fonts/irmed.ttf"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>